refactor(lotto): 전체적인 로직 수정 및 사용하지 않는 필드, 메서드 제거